# raylib-cmake-starter-c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ba  bas  r  ra
libs/: libEGL.dylib
libs/macos/: libEGL.dylib
scripts/: build.sh  build_angle.sh  build_angle_source.sh  run.sh  run_angle.sh
src/: main.c
